# starknet-replay

./: .gitignore  0x058.contract_class.json  0x058.json  0x058.sierra  CODEOWNERS  Cargo.toml  Makefile  README.md  check-known-txs.sh  classes.csv  classes.txt  dump.md  env.sh  get_sierra_from_contract.sh  info.json  memory.gnuplot  native-data-864754-864756-mainnet.json  native-data-875575-875575-mainnet.json  native-data.json  native-logs-864754-864756-mainnet.jsonl  plot.sh  plot_libfunc_counts.py  plot_stats.py  profile.json  report.html  run_circuits_contracts.sh  simu_tx.json  starknet-blockifier-data.py
.github/actions/install-native-runtime/: action.yml
.github/workflows/: ci.yml  daily.yml
artifacts/: casm-compilation-time-vs-native-compilation-time.meta.json  compilation-time-distribution.meta.json  compiled-contract-size-distribution.meta.json  sierra-size-vs-compilation-time.meta.json  sierra-size-vs-compiled-contract-size.meta.json
benchmark/: README.md  benchmark_block_range.sh  benchmark_classes.sh  benchmark_txs.sh  gather_info.py  generate_report.py  plot_call_execution.py  plot_compilation.py  plot_tx_execution.py  plot_utils.py  requirements.txt
contracts/cairo_native_control_contract/: Scarb.toml
contracts/cairo_native_control_contract/src/: events.cairo  lib.cairo  traits.cairo
contracts/cairo_native_control_contract/tests/: test_contract.cairo
plots/: gather_info.py  generate_report.py  plot_compilation.py
plotting/: filter_execution_time.py  parse_execution_time.py  plot.py  plot_block_composition.py  plot_compilation_logs.py  plot_compilation_memory.py  plot_compilation_memory_corr.py  plot_compilation_memory_trend.py  plot_compilation_size.py  plot_compilation_size_corr.py  plot_compilation_size_trend.py  plot_compilation_stats.py  plot_compilation_time.py  plot_compilation_time_finer.py  plot_compilation_time_trend.py  plot_compilation_trend.py  plot_execution_time.py  plot_finer_compilation_time.py  utils.py
plotting/block_composition_plots/: plot_syscall_composition_by_block.py  plot_syscall_composition_by_clash.py  plot_syscall_heavy_composition.py  plot_transfers_swaps_composition.py  utils.py
plotting/composition_plots/: plot_corr_syscall_speedup.py  plot_syscall_composition_by_block.py  plot_syscall_composition_by_clash.py  plot_transfers_swaps_composition.py  utils.py
profiler-sdk/: Cargo.toml  README.md  STARKNET.md
profiler-sdk/examples/: cairo-native-2.rs  cairo-native.rs  cairo-vm.rs  callstack.rs  shared-libraries.rs
profiler-sdk/src/: lib.rs  model.rs  schema.rs  transforms.rs  tree.rs
replay/: Cargo.toml
replay/bench/: yas.rs
replay/examples/: execute-contract.rs
replay/src/: benchmark.rs  block_composition.rs  execution.rs  libfunc_counter.rs  libfunc_profile.rs  main.rs  state_dump.rs
rpc-state-reader/: Cargo.toml
rpc-state-reader/src/: blockifier_state_reader.rs  cache.rs  execution.rs  lib.rs  objects.rs  reader.rs  rpc_state.rs  utils.rs
rpc_cache/: 864754.json  864755.json  864756.json  876461.json  876462.json
scripts/: benchmark.sh  benchmark_block.sh  benchmark_compilation.sh  benchmark_compilation_block.sh  benchmark_compilation_tx.sh  benchmark_compilation_txs.sh  benchmark_tx.sh  benchmark_txs.sh  block_composition.py  block_composition_libfunc_profile.sh  cmp-state-dumps.py  cmp_state_dumps.py  cmp_state_dumps.sh  cmp_trace_dumps.sh  compare_state_dump.sh  delta_state_dump.sh  delta_state_dumps.sh  diff-trace-flow.sh  diff-trace.sh  extract_call.py  felt_to_string.py  mux.sh  run_benchmark.sh  run_tx_benchmark.sh  show_tx_diff.sh  string-to-felt.sh
state-reader/: Cargo.toml
state-reader/src/: block_state_reader.rs  cache.rs  class_manager.rs  compiler.rs  disk_state_reader.rs  error.rs  full_state_reader.rs  lib.rs  objects.rs  remote_cache.rs  remote_reader.rs  remote_state_cache.rs  remote_state_reader.rs  state_cache.rs  utils.rs
tools/: Cargo.toml  README.md
traces/emu/: trace_0.json
traces/native/: trace_11.json  trace_12.json  trace_13.json  trace_14.json  trace_15.json  trace_16.json  trace_17.json  trace_18.json  trace_19.json  trace_2.json  trace_20.json  trace_21.json  trace_22.json  trace_23.json  trace_24.json  trace_25.json  trace_26.json  trace_27.json  trace_28.json  trace_29.json  trace_31.json  trace_32.json  trace_33.json  trace_34.json  trace_35.json  trace_36.json  trace_37.json  trace_38.json  trace_39.json  trace_4.json  trace_40.json  trace_41.json  trace_43.json  trace_44.json  trace_45.json  trace_46.json  trace_47.json  trace_48.json  trace_49.json  trace_5.json  (+48 more)
