[workspace]
members = ["replay", "tools", "profiler-sdk", "state-reader"]


# Explicitly set the resolver to the default for edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.dependencies]
starknet-types-core = "0.2.0"
tracing = "0.1"
serde_json = "1.0.135"
serde_with = "3.12.0"
serde = "1.0.219"
fs2 = "0.4.3"
cairo-native = { git = "https://github.com/lambdaclass/cairo_native", rev = "3299da5446b74b3d4e4682de7df08629ee6e0429" }
cairo-vm = "3.0.0"
anyhow = "1.0"

# Cairo Dependencies
cairo-lang-filesystem = "~2.15.0"
cairo-lang-starknet-classes = "~2.15.0"
cairo-lang-starknet = "~2.15.0"
cairo-lang-compiler = "~2.15.0"
cairo-lang-sierra = "~2.15.0"

# Sequencer Dependencies
starknet_api = { git = "https://github.com/lambdaclass/sequencer.git", rev = "46aeec168559c72af2e416e82a964e84a035ed0c" } # main-v0.14.1
blockifier = { git = "https://github.com/lambdaclass/sequencer.git", rev = "46aeec168559c72af2e416e82a964e84a035ed0c", features = [ "cairo_native", ] } # main-v0.14.1
apollo_gateway = { git = "https://github.com/lambdaclass/sequencer.git", rev = "46aeec168559c72af2e416e82a964e84a035ed0c" } # main-v0.14.1
blockifier_reexecution = { git = "https://github.com/lambdaclass/sequencer.git", rev = "46aeec168559c72af2e416e82a964e84a035ed0c" } # main-v0.14.1
