[workspace]
members = ["replay", "tools", "profiler-sdk", "state-reader"]


# Explicitly set the resolver to the default for edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.dependencies]
starknet-types-core = "0.2.0"
tracing = "0.1"
serde_json = "1.0.135"
serde_with = "3.12.0"
serde = "1.0.219"
fs2 = "0.4.3"
cairo-native = { git = "https://github.com/lambdaclass/cairo_native", rev = "c2644a9f32169c6364e7dfb29fc3f5f1c4620e89" }
cairo-vm = "3.0.0"
anyhow = "1.0"

# Cairo Dependencies
cairo-lang-filesystem = "~2.14.1-dev.1"
cairo-lang-starknet-classes = "~2.14.1-dev.1"
cairo-lang-starknet = "~2.14.1-dev.1"
cairo-lang-compiler = "~2.14.1-dev.1"
cairo-lang-sierra = "~2.14.1-dev.1"

# Sequencer Dependencies
starknet_api = { git = "https://github.com/lambdaclass/sequencer.git", rev = "6deed4ae852da5b19875c983864e19ebb4b91926" } # main-v0.14.1
blockifier = { git = "https://github.com/lambdaclass/sequencer.git", rev = "6deed4ae852da5b19875c983864e19ebb4b91926", features = [ "cairo_native", ] } # main-v0.14.1
apollo_gateway = { git = "https://github.com/lambdaclass/sequencer.git", rev = "6deed4ae852da5b19875c983864e19ebb4b91926" } # main-v0.14.1
blockifier_reexecution = { git = "https://github.com/lambdaclass/sequencer.git", rev = "6deed4ae852da5b19875c983864e19ebb4b91926" } # main-v0.14.1
