[workspace]
members = ["replay", "tools", "profiler-sdk", "state-reader"]


# Explicitly set the resolver to the default for edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.dependencies]
starknet-types-core = "0.2.0"
tracing = "0.1"
serde_json = "1.0.135"
serde_with = "3.12.0"
serde = "1.0.219"
fs2 = "0.4.3"
cairo-native = { git = "https://github.com/lambdaclass/cairo_native", rev = "9e042d19409c822291bf351beaddd00a69d5f2b1" }
cairo-vm = "3.0.0"
anyhow = "1.0"

# Cairo Dependencies
cairo-lang-filesystem = "~2.15.0"
cairo-lang-starknet-classes = "~2.15.0"
cairo-lang-starknet = "~2.15.0"
cairo-lang-compiler = "~2.15.0"
cairo-lang-sierra = "~2.15.0"

# Sequencer Dependencies
starknet_api = { git = "https://github.com/lambdaclass/sequencer.git", rev = "c07147e3233e6743964ca5280687728bb8a1e6b8" } # update_native
blockifier = { git = "https://github.com/lambdaclass/sequencer.git", rev = "c07147e3233e6743964ca5280687728bb8a1e6b8", features = [ "cairo_native", ] } # update_native
apollo_gateway = { git = "https://github.com/lambdaclass/sequencer.git", rev = "c07147e3233e6743964ca5280687728bb8a1e6b8" } # update_native
blockifier_reexecution = { git = "https://github.com/lambdaclass/sequencer.git", rev = "c07147e3233e6743964ca5280687728bb8a1e6b8" } # update_native
