[package]
name = "rpc-state-reader"
version = "0.1.0"
edition = "2021"

[features]
# The only_casm feature compiles all the Sierra fetched contracts to CASM.
# We use this feature to avoid using cairo_native in the Replay crate.
only_casm = []
use-sierra-emu = ["blockifier/use-sierra-emu"]

[dependencies]
ureq = { version = "2.7.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = [
  "arbitrary_precision",
  "raw_value",
] }
starknet_api = {workspace = true}
cairo-lang-starknet = "2.8.0"
cairo-lang-sierra = "2.8.0"
cairo-lang-starknet-classes = "2.8.0"
cairo-lang-utils = "2.8.0"
cairo-native = { git = "https://github.com/lambdaclass/cairo_native", branch="remove_var_callee" } # main
starknet = "0.7.0"
thiserror = { workspace = true }
flate2 = "1.0.25"
dotenvy = "0.15.7"
cairo-vm = "1.0.0-rc5"
tracing = { workspace = true }
blockifier = { git = "https://github.com/lambdaclass/blockifier", branch="sierra_emu"}

[dev-dependencies]
pretty_assertions_sorted = "1.2.3"
test-case = "3.1.0"
