[package]
name = "rpc-state-reader"
version = "0.1.0"
edition = "2021"

[features]
# The only_casm feature compiles all the Sierra fetched contracts to CASM.
# We use this feature to avoid using cairo_native in the Replay crate.
only_casm = []

[dependencies]
ureq = { version = "2.10.1", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128", features = [
  "arbitrary_precision",
  "raw_value",
] }
starknet_api = {workspace = true}
cairo-lang-sierra = "2.8.4"
cairo-lang-starknet-classes = "2.8.4"
cairo-lang-utils = "2.8.4"
cairo-native = { workspace = true }
starknet = "0.12.0"
thiserror = { workspace = true }
flate2 = "1.0.34"
dotenvy = "0.15.7"
cairo-vm = "1.0.1"
blockifier = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions_sorted = "1.2.3"
test-case = "3.3.1"
