[package]
name = "rpc-state-reader"
version = "0.1.0"
edition = "2021"

[features]
# The only_casm feature compiles all the Sierra fetched contracts to CASM.
# We use this feature to avoid using cairo_native in the Replay crate.
only_casm = []
with-sierra-emu = []
with-trace-dump = []

[dependencies]
ureq = { version = "2.7.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = [
  "arbitrary_precision",
  "raw_value",
] }
serde_with = { workspace = true, features = ["macros"] }
starknet_api = {workspace = true}
cairo-lang-starknet-classes = "=2.10.0-rc.0"
cairo-lang-utils = "=2.10.0-rc.0"
cairo-native = { workspace = true }
starknet = "0.6.0"
flate2 = "1.0.25"
cairo-vm = "1.0.0-rc5"
blockifier = { workspace = true }
blockifier_reexecution = { workspace = true }
starknet_gateway = { workspace = true }
tracing = { workspace = true }
anyhow.workspace = true
sierra-emu.workspace = true
fs2.workspace = true

[dev-dependencies]
pretty_assertions_sorted = "1.2.3"
test-case = "3.1.0"
